--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 38.68.134.85, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 38.114.114.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.15MB/s(Youtube:不良林), server: 38.75.136.21, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: 38.75.136.21, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.75.136.21, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 51.81.223.4, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: s2.520guge.com, port: 443, type: vmess, uuid: cf1819c8-e530-4626-aec0-87ac04200385, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /happy, ws-headers: {Host: s2.520guge.com}}
-  - {name: 🇺🇸 美国-471.3KB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
